--- a/lang/en.json
+++ b/lang/en.json
@@ -41,5 +41,35 @@
     "Status": "Status",
     "Updated at": "Updated At",
     "Campaign": "Campaign",
-    "Campaigns": "Campaigns"
+    "Campaigns": "Campaigns",
+    "Nickname": "Nickname",
+    "Profile id": "Profile ID",
+    "Webhook url": "Webhook URL",
+    "Phone number": "Phone Number",
+    "App status": "App Status",
+    "Worked days": "Worked Days",
+    "Message count": "Message Count",
+    "Authorized": "Authorized",
+    "Delete": "Delete",
+    "View qr code": "View QR Code",
+    "Message": "Message",
+    "Replay": "Replay",
+    "Match type": "Match type",
+    "On": "On",
+    "Off": "Off",
+    "device_id": "Device",
+    "Msg": "Message",
+    "content_id": "Replay",
+    "type": "Match type",
+    "status": "Status",
+    "created_at": "Created at",
+    "updated_at": "Updated at",
+    "on": "On",
+    "off": "Off",
+    "Message text": "Message Text",
+    "Phone numbers": "Phone Numbers",
+    "Image": "Upload Image",
+    "Timeout from": "Timeout From (seconds)",
+    "Timeout to": "Timeout To (seconds)",
+    "File name": "File Name"
 }
