finsh trans all resource

--- a/lang/en.json
+++ b/lang/en.json
@@ -71,5 +71,32 @@
     "Image": "Upload Image",
     "Timeout from": "Timeout From (seconds)",
     "Timeout to": "Timeout To (seconds)",
-    "File name": "File Name"
+    "File name": "File Name",
+    "Devices": "Devices",
+    "Quick sends": "Quick Sends",
+    "Quick send": "Quick Send",
+    "Contact cats": "Contact Cats",
+    "Contact cat": "Contact Cat",
+    "Category name": "Category Name",
+    "Contacts": "Contacts",
+    "Contact": "Contact",
+    "Contact name": "Contact Name",
+    "category": "Category",
+    "Contents": "Contents",
+    "Content": "Content",
+    "Des": "Description",
+    "Title": "Title",
+    "File type": "File Type",
+    "File": "File",
+    "User devices": "User Devices",
+    "User device": "User Device",
+    "Name": "Name",
+    "Phone": "Phone",
+    "Contact cat id": "Select Category",
+    "Numbers": "Enter Numbers (one per line)",
+    "Save contacts": "Save Contacts",
+    "Bulk create contacts": "Bulk Create Contacts",
+    "Bulk create": "Bulk Create",
+    "Chat bots": "Chat Bots",
+    "Chat bot": "Chat Bot"
 }
