--- a/lang/ar.json
+++ b/lang/ar.json
@@ -101,5 +101,12 @@
     "Chat bot": "بوت الدردشة",
     "Total Subscriptions": "اجمالي الاشتراكات",
     "Active Subscriptions": "الاشتراكات النشطة",
-    "Free Subscriptions": "الاشتراكات المجانية"
+    "Free Subscriptions": "الاشتراكات المجانية",
+    "helperText.profile_id": "اختر جهازًا لإرسال الرسالة.",
+        "helperText.message_text": "أدخل محتوى الرسالة لإرسالها.",
+        "helperText.phone_numbers": "أدخل أرقام الهواتف، رقم واحد في كل سطر.",
+        "helperText.image": "اختياري: قم بإرفاق صورة مع رسالتك.",
+        "helperText.timeout_from": "الحد الأدنى للفاصل الزمني لإرسال الرسائل.",
+        "helperText.timeout_to": "الحد الأقصى للفاصل الزمني لإرسال الرسائل.",
+        "helperText.file_name": "اسم الملف المرفوع (الافتراضي: картинка)."
 }
