--- a/lang/ar.json
+++ b/lang/ar.json
@@ -13,6 +13,10 @@
     "Payment status": "حالة الدفع",
     "Approved": "موافق عليه",
     "Pending": "قيد الانتظار",
+    "Is Connected": "هل متصل",
+    "Message Count": "عدد الرسائل",
+    "Worked Days": "عدد الايام",
+    "Remaining Time": "الوقت المتبقي",
     "Connection successful.":"تم الربط بنجاح.",
     "This device is not available":"هذا الجهاز غير موجود",
     "Rejected": "مرفوض",
