--- a/lang/ar.json
+++ b/lang/ar.json
@@ -17,6 +17,7 @@
     "Message Count": "عدد الرسائل",
     "Worked Days": "عدد الايام",
     "Remaining Time": "الوقت المتبقي",
+    "Select Device": "اختر الجهاز",
     "Connection successful.":"تم الربط بنجاح.",
     "This device is not available":"هذا الجهاز غير موجود",
     "Rejected": "مرفوض",
