--- a/lang/ar.json
+++ b/lang/ar.json
@@ -128,6 +128,7 @@
     "Bulk create": " مجموعه من جهات الاتصال",
     "Chat bots": "بوتات الدردشة",
     "Chat bot": "بوت الدردشة",
+    "API Documentation": "وثائق API",
     "Total Subscriptions": "اجمالي الاشتراكات",
     "Active Subscriptions": "الاشتراكات النشطة",
     "Free Subscriptions": "الاشتراكات المجانية",
