--- a/lang/ar.json
+++ b/lang/ar.json
@@ -73,7 +73,7 @@
     "Campaigns": "الحملات",
     "Nickname": "اللقب",
     "Profile id": "معرف الملف الشخصي",
-    "Webhook url": "عنوان URL للويب هوك",
+    "Webhook url": "عنوان URL للويب هوك (للمطورين فقط)",
     "Phone number": "رقم الهاتف",
     "App status": "حالة التطبيق",
     "Worked days": "الأيام التي عملت فيها",
@@ -102,6 +102,7 @@
     "Devices": "الأجهزة",
     "Message": "رسالة",
     "Device": "الجهاز",
+    "Message Key": "مفتاح الرسالة (المستلمة)",
     "Quick sends": "إرسال سريع",
     "Quick send": "إرسال سريع",
     "Contact cats": "فئات الاتصال",
